--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8" />
         <title>Restaurant</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="/src/style.css">
+        <link rel="stylesheet" href="/dist/styles/global.css">
+        <link rel="stylesheet" href="/dist/styles/main.css">
+        
     </head>
     <body>
         <div id="content"></div>
