--- a/src/template.html
+++ b/src/template.html
@@ -13,15 +13,8 @@
         <header id="cs-navigation">
             <div class="cs-container">
                 <!--Nav Logo-->
-                <a href="" class="cs-logo" aria-label="back to home">
-                    <img
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Flogo-black.svg"
-                        alt="logo"
-                        width="210"
-                        height="29"
-                        aria-hidden="true"
-                        decoding="async"
-                    />
+                <a href="" class="page-title cs-title" aria-label="back to home">
+                    <h1>Got meat?</h1>
                 </a>
                 <!--Navigation List-->
                 <nav class="cs-nav" role="navigation">
@@ -42,7 +35,7 @@
                             ></span>
                         </div>
                     </button>
-                    <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
+                    <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how many there are-->
                     <div class="cs-ul-wrapper">
                         <ul
                             id="cs-expanded"
@@ -55,21 +48,14 @@
                                 </a>
                             </li>
                             <li class="cs-li">
-                                <a href="" class="cs-li-link"> About </a>
+                                <a href="" class="cs-li-link"> Menu </a>
                             </li>
                             <li class="cs-li">
-                                <a href="" class="cs-li-link"> Services </a>
-                            </li>
-                            <li class="cs-li">
-                                <a href="" class="cs-li-link"> About Us </a>
-                            </li>
-                            <li class="cs-li">
-                                <a href="" class="cs-li-link"> FAQ </a>
+                                <a href="" class="cs-li-link"> Contacts </a>
                             </li>
                         </ul>
                     </div>
                 </nav>
-                <a href="" class="cs-button-solid cs-nav-button">Contact Us</a>
                 <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
                 <button id="dark-mode-toggle" aria-label="dark mode toggle">
                     <svg
