Moved home page content to separate file

--- a/src/template.html
+++ b/src/template.html
@@ -6,10 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <!-- ============================================ -->
-        <!--                 Navigation                   -->
-        <!-- ============================================ -->
-
         <header id="cs-navigation">
             <div class="cs-container">
                 <!--Nav Logo-->
@@ -43,15 +39,13 @@
                             aria-expanded="false"
                         >
                             <li class="cs-li">
-                                <a href="" class="cs-li-link cs-active">
-                                    Home
-                                </a>
+                                <a href="" class="cs-li-link cs-active">Home</a>
                             </li>
                             <li class="cs-li">
-                                <a href="" class="cs-li-link"> Menu </a>
+                                <a href="" class="cs-li-link">Menu</a>
                             </li>
                             <li class="cs-li">
-                                <a href="" class="cs-li-link"> Contacts </a>
+                                <a href="" class="cs-li-link">Contacts</a>
                             </li>
                         </ul>
                     </div>
@@ -83,95 +77,7 @@
         </header>
 
         <div id="content">
-            <!-- ============================================ -->
-            <!--            Side By Side Reverse              -->
-            <!-- ============================================ -->
-
-            <section id="home-content">
-                <div class="cs-container">
-                    <div class="cs-content">
-                        <span class="cs-topper">Do you like food?</span>
-                        <h2 class="cs-title">
-                            Accessible Food That Anyone Can Eat
-                        </h2>
-                        <p class="cs-text">
-                            Immerse yourself in the tantalizing world of gourmet
-                            dining at "Savor's Catch," a vibrant and
-                            electrifying restaurant brand crafted specifically
-                            for those who relish the thrill of culinary
-                            excellence. For avid food enthusiasts who feel their
-                            taste buds awaken at the first hint of exquisite
-                            flavors, "Savor's Catch" embodies the essence of
-                            that exhilarating moment when a perfectly prepared
-                            dish and a discerning diner engage in a delightful
-                            interplay of taste and craftsmanship.
-                        </p>
-                        <picture class="cs-picture cs-picture-right">
-                            <!--Mobile Image-->
-                            <source
-                                media="(max-width: 600px)"
-                                srcset="/dist/74d0a0d0d5ba4c16fab5.png"
-                            />
-                            <!--Tablet and above Image-->
-                            <source
-                                media="(min-width: 601px)"
-                                srcset="/dist/74d0a0d0d5ba4c16fab5.png"
-                            />
-                            <img
-                                loading="lazy"
-                                decoding="async"
-                                src="/dist/74d0a0d0d5ba4c16fab5.png"
-                                alt="people"
-                                width="608"
-                                height="406"
-                            />
-                        </picture>
-                    </div>
-                    <div class="cs-stats-group">
-                        <picture class="cs-picture cs-picture-left">
-                            <!--Mobile Image-->
-                            <source
-                                media="(max-width: 600px)"
-                                srcset="/dist/7aae6a15ce7d1a7a24e7.png"
-                            />
-                            <!--Tablet and above Image-->
-                            <source
-                                media="(min-width: 601px)"
-                                srcset="/dist/7aae6a15ce7d1a7a24e7.png"
-                            />
-                            <img
-                                loading="lazy"
-                                decoding="async"
-                                src="/dist/7aae6a15ce7d1a7a24e7.png"
-                                alt="people"
-                                width="608"
-                                height="662"
-                            />
-                        </picture>
-                        <ul class="cs-stats">
-                            <li class="cs-stat">
-                                <span class="cs-number">99%</span>
-                                <span class="cs-desc"
-                                    >Positive customer reviews</span
-                                >
-                            </li>
-                            <li class="cs-stat">
-                                <span class="cs-number">10</span>
-                                <span class="cs-desc"
-                                    >Dish 'Try Again' Special</span
-                                >
-                            </li>
-                            <li class="cs-stat">
-                                <span class="cs-number">24/7</span>
-                                <span class="cs-desc"
-                                    >Online reservation and inquiry
-                                    service</span
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
+  
         </div>
     </body>
 </html>
