Added home page modules

--- a/src/home.html
+++ b/src/home.html
@@ -3,9 +3,9 @@
 <!--            Side By Side Reverse              -->
 <!-- ============================================ -->
 
-<section id="home-content">
-    <div class="cs-container">
-        <div class="cs-content">
+<section id="home-content-container">
+    <div class="home-content">
+        <div class="home-content-right">
             <span class="cs-topper">Do you like food?</span>
             <h2 class="cs-title">Accessible Food That Anyone Can Eat</h2>
             <p class="cs-text">
@@ -43,7 +43,7 @@
                 />
             </picture>
         </div>
-        <div class="cs-stats-group">
+        <div class="home-content-left">
             <picture class="cs-picture cs-picture-left">
                 <!--Mobile Image-->
                 <source
