Added contacts page loader

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -28,6 +28,26 @@
             <picture class="cs-picture">
                 <img
                     class="cs-icon"
+                    src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-email.svg"
+                    alt="icon"
+                    width="40"
+                    height="35"
+                    loading="lazy"
+                    decoding="async"
+                    aria-hidden="true"
+                />
+            </picture>
+            <div class="cs-flex-group">
+                <span class="cs-header">Email</span>
+                <a href="mailto:Info@email.com" class="cs-link"
+                    >info@email.com</a
+                >
+            </div>
+        </li>
+        <li class="cs-item">
+            <picture class="cs-picture">
+                <img
+                    class="cs-icon"
                     src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/pin-grey.svg"
                     alt="icon"
                     width="40"
@@ -61,7 +81,7 @@
             <div class="cs-flex-group">
                 <span class="cs-header">Open Hours</span>
                 <span class="cs-hours">Monday To Saturday</span>
-                <span class="cs-hours">9:00 AM - 10:30 PM</span>
+                <span class="cs-hours">9:00 - 22:30</span>
             </div>
         </li>
     </ul>
