Replaced png images with jpg

--- a/src/home.html
+++ b/src/home.html
@@ -27,21 +27,21 @@
                         <!--Mobile Image-->
                         <source
                             media="(max-width: 600px)"
-                            srcset="7aae6a15ce7d1a7a24e7.png"
+                            srcset="7aae6a15ce7d1a7a24e7.jpg"
                         />
                         <!--Tablet and above Image-->
                         <source
                             media="(min-width: 601px)"
-                            srcset="7aae6a15ce7d1a7a24e7.png"
+                            srcset="7aae6a15ce7d1a7a24e7.jpg"
                         />
                         <!-- For local run -->
-                        <!-- src="../dist/7aae6a15ce7d1a7a24e7.png" -->
+                        <!-- src="../dist/7aae6a15ce7d1a7a24e7.jpg" -->
                         <!-- For dev dev srv run -->
-                        <!-- src="7aae6a15ce7d1a7a24e7.png" -->
+                        <!-- src="7aae6a15ce7d1a7a24e7.jpg" -->
                         <img
                             loading="lazy"
                             decoding="async"
-                            src="7aae6a15ce7d1a7a24e7.png"
+                            src="7aae6a15ce7d1a7a24e7.jpg"
                             alt="people"
                             width="608"
                             height="662"
@@ -53,17 +53,17 @@
                         <!--Mobile Image-->
                         <source
                             media="(max-width: 600px)"
-                            srcset="74d0a0d0d5ba4c16fab5.png"
+                            srcset="74d0a0d0d5ba4c16fab5.jpg"
                         />
                         <!--Tablet and above Image-->
                         <source
                             media="(min-width: 601px)"
-                            srcset="74d0a0d0d5ba4c16fab5.png"
+                            srcset="74d0a0d0d5ba4c16fab5.jpg"
                         />
                         <img
                             loading="lazy"
                             decoding="async"
-                            src="74d0a0d0d5ba4c16fab5.png"
+                            src="74d0a0d0d5ba4c16fab5.jpg"
                             alt="people"
                             width="608"
                             height="406"
