--- a/src/menu.html
+++ b/src/menu.html
@@ -19,16 +19,16 @@
                 <picture class="cs-picture" aria-hidden="true">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/dist/7417ae8cfd1c6d06e004.png"
+                        srcset="/dist/7417ae8cfd1c6d06e004.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/dist/7417ae8cfd1c6d06e004.png"
+                        srcset="/dist/7417ae8cfd1c6d06e004.jpg"
                     />
                     <img
                         loading="lazy"
                         decoding="async"
-                        src="/dist/7417ae8cfd1c6d06e004.png"
+                        src="/dist/7417ae8cfd1c6d06e004.jpg"
                         alt="food"
                         width="160"
                         height="160"
@@ -50,16 +50,16 @@
                 <picture class="cs-picture" aria-hidden="true">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/dist/011a6a691872d268eccc.png"
+                        srcset="/dist/011a6a691872d268eccc.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/dist/011a6a691872d268eccc.png"
+                        srcset="/dist/011a6a691872d268eccc.jpg"
                     />
                     <img
                         loading="lazy"
                         decoding="async"
-                        src="/dist/011a6a691872d268eccc.png"
+                        src="/dist/011a6a691872d268eccc.jpg"
                         alt="food"
                         width="160"
                         height="160"
@@ -81,16 +81,16 @@
                 <picture class="cs-picture" aria-hidden="true">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/dist/d4346084ebcebb8c4917.png"
+                        srcset="/dist/d4346084ebcebb8c4917.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/dist/d4346084ebcebb8c4917.png"
+                        srcset="/dist/d4346084ebcebb8c4917.jpg"
                     />
                     <img
                         loading="lazy"
                         decoding="async"
-                        src="/dist/d4346084ebcebb8c4917.png"
+                        src="/dist/d4346084ebcebb8c4917.jpg"
                         alt="food"
                         width="160"
                         height="160"
@@ -114,16 +114,16 @@
                 <picture class="cs-picture" aria-hidden="true">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/dist/20fa9af26692e16da47b.png"
+                        srcset="/dist/20fa9af26692e16da47b.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/dist/20fa9af26692e16da47b.png"
+                        srcset="/dist/20fa9af26692e16da47b.jpg"
                     />
                     <img
                         loading="lazy"
                         decoding="async"
-                        src="/dist/20fa9af26692e16da47b.png"
+                        src="/dist/20fa9af26692e16da47b.jpg"
                         alt="food"
                         width="160"
                         height="160"
@@ -147,16 +147,16 @@
                 <picture class="cs-picture" aria-hidden="true">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/dist/4ea097f917d537a08ade.png"
+                        srcset="/dist/4ea097f917d537a08ade.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/dist/4ea097f917d537a08ade.png"
+                        srcset="/dist/4ea097f917d537a08ade.jpg"
                     />
                     <img
                         loading="lazy"
                         decoding="async"
-                        src="/dist/4ea097f917d537a08ade.png"
+                        src="/dist/4ea097f917d537a08ade.jpg"
                         alt="food"
                         width="160"
                         height="160"
@@ -178,16 +178,16 @@
                 <picture class="cs-picture" aria-hidden="true">
                     <source
                         media="(max-width: 600px)"
-                        srcset="/dist/9d0615d98829c157add9.png"
+                        srcset="/dist/9d0615d98829c157add9.jpg"
                     />
                     <source
                         media="(min-width: 601px)"
-                        srcset="/dist/9d0615d98829c157add9.png"
+                        srcset="/dist/9d0615d98829c157add9.jpg"
                     />
                     <img
                         loading="lazy"
                         decoding="async"
-                        src="/dist/9d0615d98829c157add9.png"
+                        src="/dist/9d0615d98829c157add9.jpg"
                         alt="food"
                         width="160"
                         height="160"
