--- a/src/template.html
+++ b/src/template.html
@@ -10,17 +10,17 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="../src/assets/img/favicons/apple-touch-icon.png"
+            href="../../src/assets/img/favicons/apple-touch-icon.png"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="../src/assets/img/favicons/favicon-32x32.png"
+            href="../../src/assets/img/favicons/favicon-32x32.png"
         />
         <link
             rel="icon"
-            href="../src/assets/img/favicons/favicon.ico"
+            href="../../src/assets/img/favicons/favicon.ico"
             sizes="32x32"
             type="image/x-icon"
         />
@@ -28,11 +28,11 @@
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="../src/assets/img/favicons/favicon-16x16.png"
+            href="../../src/assets/img/favicons/favicon-16x16.png"
         />
         <link
             rel="manifest"
-            href="../src/assets/img/favicons/site.webmanifest"
+            href="../../src/assets/img/favicons/site.webmanifest"
         />
     </head>
     <body>
