--- a/src/template.html
+++ b/src/template.html
@@ -1,34 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Savor's Catch</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- <link rel="stylesheet" href="styles/dark.css">
-        <link rel="stylesheet" href="styles/global.css">
-        <link rel="stylesheet" href="styles/main.css"> -->
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="../src/assets/img/favicons/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="../src/assets/img/favicons/favicon-32x32.png"
-        />
-        
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="../src/assets/img/favicons/favicon-16x16.png"
-        />
-        <link
-            rel="manifest"
-            href="../src/assets/img/favicons/site.webmanifest"
-        />
+        <link rel="stylesheet" href="/src/styles/dark.css" />
+        <link rel="stylesheet" href="/src/styles/global.css" />
+        <link rel="stylesheet" href="/src/styles/main.css" />
     </head>
     <body>
         <div id="content">
