--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,7 @@
         <meta charset="utf-8" />
         <title>Savor's Catch</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="/src/styles/dark.css" />
-        <link rel="stylesheet" href="/src/styles/global.css" />
-        <link rel="stylesheet" href="/src/styles/main.css" />
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <div id="content">
